# stubfolio

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
apps/concerts/: apps.py  models.py  serializers.py  services.py  urls.py  views.py  views_auth.py
apps/concerts/migrations/: 0001_initial.py  0002_song.py  0003_ticketstub.py
apps/core/: constants.py
backend/: .env.example  pyproject.toml
backend/apps/concerts/: admin.py  apps.py  models.py  serializers.py  services.py  views.py
backend/apps/concerts/migrations/: 0004_song_info.py  0005_remove_ticketstub_energy_score_and_more.py  0006_ticketstub_user.py
backend/stubfolio/: asgi.py  settings.py  wsgi.py
backend/tests/: test_health.py  test_services.py
frontend/: package-lock.json
frontend/src/: App.tsx
stubfolio/: settings.py  urls.py
tests/: test_services.py  test_views.py
